--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.10.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
