--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@google/generative-ai": "^0.21.0",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
