--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "framer-motion": "^12.4.1",
+    "howler": "^2.2.4",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "14.2.3",
